Wed Apr  4 19:06:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          Added the Bug_689_Regression test.

Wed Apr  4 16:32:03 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Bug_1890_Regression_Test.cpp:
        * tests/Bug_2540_Regression_Test.cpp: Since these bugs are all about
          ACE_Select_Reactor, always run them on ACE_Select_Reactor. The
          tests rely on behavior that doesn't hold on ACE_WFMO_Reactor, so
          shouldn't be tried on simply the platform's default reactor.

Wed Apr  4 16:12:57 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          Added the Bug_1107_Regression test.

Wed Apr  4 11:57:48 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Log_Msg.cpp:

          When ACE::fini() is called, all of the exit hooks registered with
          the ACE_Object_Manager are called.  In single threaded mode, one
          of these is the cleanup adapter for the ACE_Log_Msg object
          allocated into a static pointer variable in
          ACE_Log_Msg::instance().

          Calling ACE::init() after ACE::fini() would not re-initialize the
          ACE_Log_Msg object and thus memory issues would arise as soon as
          it is used.

          I moved the static pointer variable to the file level and made a
          new cleanup adapter that would reset the static pointer variable
          when the ACE_Log_Msg object is deleted.  The next use of
          ACE_Log_Msg::instance() would then result in the allocation of a
          new ACE_Log_Msg object.

          This fixes Bug 2874.

Wed Apr  4 11:33:57 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Env_Value_Test.cpp: Cast ACE_Env_Value to ACE_TCHAR to print
          its value.

Wed Apr  4 09:49:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * include/makeinclude/platform_lynxos.GNU:
          Minor warning elimination changes for ACE/TAO.
